--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "backbone.localstorage": "^1.1.14",
     "jquery": "^2.1.3",
     "jquery-browserify": "^1.8.1",
-    "moment": "^2.8.4"
+    "moment": "^2.8.4",
+    "underscore": "^1.7.0"
   }
 }
